klpsst_wb/src/Frontend/klpsst.css
/* klpsst.css */

#homepage {
  width: 100%;
  height: 150vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  background-color: rgb(243, 180, 65);
  overflow: hidden;
  box-sizing: border-box;
  position: relative;
}

#homepage.dark-mode {
  background-color: #333;
  color: #fff;
  /* Add dark mode styles for other elements as needed */
}

#homepage h1 {
  margin-top: 0px;
  text-align: center;
  color: inherit; /* Inherit color from parent (#homepage) */
  margin-bottom: 20px;
}

#homepage img {
  width: 168px;
  height: 168px;
  margin-bottom: 20px;
}

#homepage form {
  width: 300px;
  display: flex;
  flex-direction: column;
  align-items: center;
}

#homepage label {
  margin-bottom: 8px;
  color: inherit;
}

#homepage input {
  padding: 10px;
  margin-bottom: 16px;
  border: 1px solid #ccc;
  border-radius: 4px;
  width: 100%;
  box-sizing: border-box;
}

#homepage input[type="submit"] {
  background-color: #544caf;
  color: white;
  padding: 10px;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  width: 100%;
  box-sizing: border-box;
}

#homepage input[type="submit"]:hover {
  background-color: #b0aec5;
}

#homepage h3 {
  text-align: center;
  color: inherit;
  margin-top: 20px;
}

#homepage input[type="file"] {
  margin-bottom: 16px;
}

#homepage button {
  background-color: #544caf;
  color: white;
  padding: 10px;
  border: none;
  border-radius: 4px;
  cursor: pointer;
}

#homepage button:hover {
  background-color: #544caf;
}

#homepage p {
  text-align: center;
  color: inherit;
}

#buttons {
  position: fixed; /* Fixed positioning to keep it in place */
  top: 10%; /* Position at the top */
  right: 0; /* Align to the right */
  margin: 10px;
  z-index: 1000; /* Set a high z-index to ensure it's above other elements */
}

#buttons toggleButton {
  position: fixed; /* Fixed positioning to keep it in place */
  top: 5%; /* Position at the top */
  right: 0; /* Align to the right */
  margin: 10px;
  z-index: 1000; /* Set a high z-index to ensure it's above other elements */
}

/* fix later */
#buttons checkLogin {
  position: fixed; /* Fixed positioning to keep it in place */
  top: 5%; /* Position at the top */
  right: 0; /* Align to the right */
  margin: 10px;
  z-index: 1000; /* Set a high z-index to ensure it's above other elements */
}

.download-button {
  padding: 10px;
  margin-bottom: 16px;
  border: 1px solid #ccc;
  border-radius: 4px;
  width: 100%;
  box-sizing: border-box;
}

#homepage button.download-button:hover {
  background-color: #b0aec5; /* Change the background color on hover */
}

